new templates nd scripts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,43 @@ header h5  {
   width: 36px;
 }
 
+#nav_r {
+	position: absolute;
+	top: 72px;
+	right: 15px;
+	width: 42px;
+	display: block;
+	clear: none;
+}
+
+#pageediticn {
+	position: absolute;
+	bottom: 15px;
+	right: 15px;
+}
+
+#listpage_headline_wrapper {
+	width: 100%;
+}
+
+#listpage_headline_wrapper:after {
+  clear: both;
+}
+
+#listpage_sortmarker {
+	width: 10%;
+	padding-top: 10px;
+	float: right;
+	font-size: 0.8em;
+	text-align: right;
+}
+
+#listpage_headline {
+	width: 85%;
+	float: left;
+	clear: none;
+}
+
 a { text-decoration: none; color: var(--site-color); }
 a:hover, a:focus {  text-decoration: underline ; }
 a small { font-size: 11px; margin-top: -0.3em; display: block; }
@@ -103,11 +140,6 @@ img { max-width: 100%; }
 .tiny a  { color: #cde;  }
 .tiny a:hover { color: #cdf; }
 
-section p {
-  margin-top: 0px;
-  margin-bottom: 4px;
-}
-
 .pagestamp {
   margin-top: 25px;
   color: #ccc;
@@ -121,6 +153,17 @@ section p {
 
 hr { border: 0; background: #e5e5e5; height: 1px; margin: 0 0 20px; }
 
+section {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
+
+section p {
+  margin-top: 0px;
+  margin-bottom: 4px;
+}
+
 /* special definitions */
 
 /* Excerpts */
@@ -133,6 +176,10 @@ section div.excerpt {
   font-size: 0.8em;
   border-radius: 10px;
   border: 1px solid #e5e5e5;
+}
+
+section div.stale {
+  color: #999;
 }
 
 section div.excerpt > a:first-of-type {
