--- a/assets/preload/site-style.css
+++ b/assets/preload/site-style.css
@@ -8,15 +8,24 @@ ELIXIR colors:
   --site-color: #023453;
 }
 
+#headband {
+  background-color: #023453;
+  height: 48px;
+  box-shadow: 0 0 .2rem rgba(0,0,0,.1),0 .2rem .4rem rgba(0,0,0,.2)
+}
+
 #logo_topleft {
-  margin-top: 10px;
-  margin-left: 12px;
+  float: left;
+  margin-top: 8px;
+  margin-left: 8px;
+  width: 24px;
 }
 
 #logo_topright {
-  margin-top: 10px;
+  float: right;
+  margin-top: 4px;
   margin-right: 12px;
-  width: 36px;
+  width: 48px; 
 }
 
 #sitelogo {}
