--- a/docs/css/theme_overrides.css
+++ b/docs/css/theme_overrides.css
@@ -25,9 +25,24 @@ nav.md-tabs {
 }
 
 h2 {
-    color: var(--md-accent-fg-color);
-    border-top:  var(--md-accent-fg-color) thin solid;
-    border-bottom:  var(--md-accent-fg-color) thin solid;
+    border-top:  #023362 thin solid;
+    border-bottom:  #023362 thin solid;
+}
+
+aside.blog-post-aside {
+    border-top:  #023362 thin solid;
+    margin-top:  24px;
+    padding-top:  12px;
+}
+
+div.contact_spacer {
+    display:  block;
+    height:  20px;
+}
+
+h3.title_news {
+    margin-top:  10px;
+    margin-bottom:  0px;
 }
 
 div.tabbed-set {
